# genepie

./: .cursorignore  .gitignore  CLAUDE.md  README.md  configure.ac  fortdep.py  pyproject.toml
.github/workflows/: build-wheels.yml  tests.yml
demo/: demo.ipynb
src/analysis/clustering/kmeans_clustering/: Makefile.am  Makefile.depends  kc_control.fpp
src/analysis/converter/cg_convert/: Makefile.am
src/analysis/converter/crd_convert/: Makefile.am  Makefile.depends  cc_control.fpp
src/analysis/converter/pcrd_convert/: Makefile.am
src/analysis/converter/remd_convert/: Makefile.am
src/analysis/converter/rst_convert/: Makefile.am
src/analysis/converter/rst_upgrade/: Makefile.am
src/analysis/free_energy/mbar_analysis/: Makefile.am  Makefile.depends  ma_analyze.fpp  mbar_control.fpp
src/analysis/free_energy/meanforce_analysis/: Makefile.am
src/analysis/free_energy/pmf_analysis/: Makefile.am
src/analysis/free_energy/wham_analysis/: Makefile.am  Makefile.depends  wa_control.fpp
src/analysis/interface/: Makefile.am
src/analysis/interface/dssp_interface/: Makefile.am
src/analysis/interface/genepy/: __init__.py
src/analysis/interface/python_interface/: Makefile.am  Makefile.depends  README.md  __init__.py  aa_analysis_analysis.fpp  aa_analysis_c_mod.fpp  all_run.sh  atdyn_c_mod.fpp  avecrd_analysis.py  avecrd_c_mod.fpp  c2py_util.py  conv_f_c_util.fpp  converter.py  crd_convert.py  crd_convert_c_mod.fpp  crd_convert_convert.fpp  ctrl_c_mod.fpp  ctrl_files.py  custom_test_case.py  define_molecule.fpp  demo.ipynb  diffusion_analysis.py  diffusion_analysis_analyze.fpp  diffusion_analysis_main_c_mod.fpp  diffusion_c_mod.fpp  diffusion_impl.fpp  drms_analysis.py  drms_c_mod.fpp  drms_impl.fpp  dynamic_string_mod.fpp  export_molecule_c_mod.fpp  genesis_exe.py  hb_analysis.py  hb_analysis_analysis.fpp  hb_analysis_c_mod.fpp  hb_analysis_count_atom.py  hb_analysis_count_snap.py  hb_c_mod.fpp  kc_analysis_analysis.fpp  kmeans_c_mod.fpp  (+57 more)
src/analysis/libana/: Makefile.am  Makefile.depends  result_sink_mod.fpp  trj_source_mod.fpp
src/analysis/mode_analysis/avecrd_analysis/: Makefile.am  Makefile.depends  aa_control.fpp
src/analysis/mode_analysis/eigmat_analysis/: Makefile.am
src/analysis/mode_analysis/flccrd_analysis/: Makefile.am
src/analysis/mode_analysis/pcavec_drawer/: Makefile.am
src/analysis/mode_analysis/prjcrd_analysis/: Makefile.am
src/analysis/sp_analysis/contact_analysis/: Makefile.am
src/analysis/sp_analysis/density_analysis/: Makefile.am
src/analysis/sp_analysis/hbond_analysis/: Makefile.am
src/analysis/sp_analysis/libspana/: Makefile.am
src/analysis/sp_analysis/rdf_analysis/: Makefile.am
src/analysis/sp_analysis/sasa_analysis/: Makefile.am
src/analysis/trj_analysis/comcrd_analysis/: Makefile.am
src/analysis/trj_analysis/diffusion_analysis/: Makefile.am  Makefile.depends  da_control.fpp
src/analysis/trj_analysis/distmat_analysis/: Makefile.am
src/analysis/trj_analysis/drms_analysis/: Makefile.am  Makefile.depends  dr_control.fpp
src/analysis/trj_analysis/energy_analysis/: Makefile.am  ea_setup.fpp
src/analysis/trj_analysis/fret_analysis/: Makefile.am
src/analysis/trj_analysis/hb_analysis/: Makefile.am  Makefile.depends  hb_control.fpp
src/analysis/trj_analysis/lipidthick_analysis/: Makefile.am
src/analysis/trj_analysis/msd_analysis/: Makefile.am  Makefile.depends  ma_control.fpp
src/analysis/trj_analysis/qval_analysis/: Makefile.am
src/analysis/trj_analysis/qval_residcg_analysis/: Makefile.am
src/analysis/trj_analysis/rg_analysis/: Makefile.am  Makefile.depends  rg_control.fpp
src/analysis/trj_analysis/ring_analysis/: Makefile.am
src/analysis/trj_analysis/rmsd_analysis/: Makefile.am  Makefile.depends  ra_analyze.fpp  ra_control.fpp
src/analysis/trj_analysis/tilt_analysis/: Makefile.am
src/analysis/trj_analysis/trj_analysis/: Makefile.am  Makefile.depends  ta_control.fpp
src/analysis/utilities/emmap_generator/: Makefile.am
src/analysis/utilities/morph_generator/: Makefile.am
src/analysis/utilities/pathcv_analysis/: Makefile.am
src/analysis/utilities/qmmm_generator/: Makefile.am
src/analysis/utilities/rpath_generator/: Makefile.am
src/atdyn/: Makefile.am  at_qmmm.fpp
src/genepie/: ctrl_files.py  genesis_exe.py  libgenesis.py  libloader.py  s_molecule.py
src/genepie/tests/: all_run.sh  download_test_data.py  test_atdyn.py  test_diffusion.py  test_drms.py  test_msd.py  test_rg.py  test_rmsd.py  test_rmsd_lazy.py  test_trj.py
src/genepy/: c2py_util.py  cli.py  py2c_util.py  s_molecule.py
src/lib/: Makefile.am  Makefile.depends  fileio_control.fpp  molecules_str.fpp  timers.fpp
src/spdyn/: Makefile.am
