[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genepie"
version = "0.1.16"
description = "GENESIS: Molecular dynamics simulation and analysis toolkit for biomolecular systems"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Yasuhiro Matsunaga"},
    {name = "Chigusa Kobayashi"},
    {name = "GENESIS Development Team"},
]
keywords = [
    "molecular dynamics",
    "simulation",
    "biomolecular",
    "analysis",
    "GENESIS",
    "MD",
    "protein",
    "trajectory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
full = [
    "mdtraj",
    "MDAnalysis",
    "nglview",
    "py3Dmol",
]
visualization = [
    "nglview",
    "py3Dmol",
]
analysis = [
    "mdtraj",
    "MDAnalysis",
]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
# MD Engine
atdyn = "genepie.cli:run_atdyn"
# Clustering
kmeans_clustering = "genepie.cli:run_kmeans_clustering"
# Converters
cg_convert = "genepie.cli:run_cg_convert"
crd_convert = "genepie.cli:run_crd_convert"
pcrd_convert = "genepie.cli:run_pcrd_convert"
remd_convert = "genepie.cli:run_remd_convert"
rst_convert = "genepie.cli:run_rst_convert"
rst_upgrade = "genepie.cli:run_rst_upgrade"
# Free Energy
mbar_analysis = "genepie.cli:run_mbar_analysis"
meanforce_analysis = "genepie.cli:run_meanforce_analysis"
pmf_analysis = "genepie.cli:run_pmf_analysis"
wham_analysis = "genepie.cli:run_wham_analysis"
# Interface
dssp_interface = "genepie.cli:run_dssp_interface"
# Mode Analysis
avecrd_analysis = "genepie.cli:run_avecrd_analysis"
eigmat_analysis = "genepie.cli:run_eigmat_analysis"
flccrd_analysis = "genepie.cli:run_flccrd_analysis"
pcavec_drawer = "genepie.cli:run_pcavec_drawer"
prjcrd_analysis = "genepie.cli:run_prjcrd_analysis"
# SP Analysis
contact_analysis = "genepie.cli:run_contact_analysis"
density_analysis = "genepie.cli:run_density_analysis"
hbond_analysis = "genepie.cli:run_hbond_analysis"
rdf_analysis = "genepie.cli:run_rdf_analysis"
sasa_analysis = "genepie.cli:run_sasa_analysis"
# Trajectory Analysis
comcrd_analysis = "genepie.cli:run_comcrd_analysis"
diffusion_analysis = "genepie.cli:run_diffusion_analysis"
distmat_analysis = "genepie.cli:run_distmat_analysis"
drms_analysis = "genepie.cli:run_drms_analysis"
energy_analysis = "genepie.cli:run_energy_analysis"
fret_analysis = "genepie.cli:run_fret_analysis"
hb_analysis = "genepie.cli:run_hb_analysis"
lipidthick_analysis = "genepie.cli:run_lipidthick_analysis"
msd_analysis = "genepie.cli:run_msd_analysis"
qval_analysis = "genepie.cli:run_qval_analysis"
qval_residcg_analysis = "genepie.cli:run_qval_residcg_analysis"
rg_analysis = "genepie.cli:run_rg_analysis"
ring_analysis = "genepie.cli:run_ring_analysis"
rmsd_analysis = "genepie.cli:run_rmsd_analysis"
tilt_analysis = "genepie.cli:run_tilt_analysis"
trj_analysis = "genepie.cli:run_trj_analysis"
# Utilities
emmap_generator = "genepie.cli:run_emmap_generator"
morph_generator = "genepie.cli:run_morph_generator"
pathcv_analysis = "genepie.cli:run_pathcv_analysis"
qmmm_generator = "genepie.cli:run_qmmm_generator"
rpath_generator = "genepie.cli:run_rpath_generator"

[project.urls]
Homepage = "https://www.r-ccs.riken.jp/labs/cbrt/"
Repository = "https://github.com/genesis-release-r-ccs/genesis"
Documentation = "https://www.r-ccs.riken.jp/labs/cbrt/genesis/"
"Bug Tracker" = "https://github.com/genesis-release-r-ccs/genesis/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["genepie*"]

[tool.setuptools.package-data]
genepie = [
    "*.so",
    "*.dylib",
    "bin/*",
]
